Testing model is done

--- a/notebook/research.ipynb
+++ b/notebook/research.ipynb
@@ -2845,8 +2845,378 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "48eb3604",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "User_id\n",
+       "254       9.0\n",
+       "2276      0.0\n",
+       "2766      0.0\n",
+       "2977      0.0\n",
+       "3363      0.0\n",
+       "         ... \n",
+       "275970    9.0\n",
+       "277427    0.0\n",
+       "277478    0.0\n",
+       "277639    0.0\n",
+       "278418    0.0\n",
+       "Name: Harry Potter and the Chamber of Secrets (Book 2), Length: 888, dtype: float64"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "book_pivot.iloc[237,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "36cc5163",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distance , suggestion = model.kneighbors(book_pivot.iloc[237,:].values.reshape(1,-1),n_neighbors=6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "9b406d0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.        , 68.78953409, 69.5413546 , 72.64296249, 76.83098333,\n",
+       "        77.28518616]])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "distance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "69d185b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[237, 240, 238, 241, 184, 536]], dtype=int64)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "suggestion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "d2312b5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Harry Potter and the Chamber of Secrets (Book 2)',\n",
+      "       'Harry Potter and the Prisoner of Azkaban (Book 3)',\n",
+      "       'Harry Potter and the Goblet of Fire (Book 4)',\n",
+      "       'Harry Potter and the Sorcerer's Stone (Book 1)', 'Exclusive',\n",
+      "       'The Cradle Will Fall'],\n",
+      "      dtype='object', name='Title')\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(suggestion)):\n",
+    "    print(book_pivot.index[suggestion[i]])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "bac49755",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "book_names=book_pivot.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "65fdfb3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['1984', '1st to Die: A Novel', '2nd Chance', '4 Blondes',\n",
+       "       '84 Charing Cross Road', 'A Bend in the Road', 'A Case of Need',\n",
+       "       'A Child Called \\It\\\": One Child's Courage to Survive\"',\n",
+       "       'A Civil Action', 'A Cry In The Night',\n",
+       "       ...\n",
+       "       'Winter Solstice', 'Wish You Well', 'Without Remorse',\n",
+       "       'Wizard and Glass (The Dark Tower, Book 4)', 'Wuthering Heights',\n",
+       "       'Year of Wonders', 'You Belong To Me',\n",
+       "       'Zen and the Art of Motorcycle Maintenance: An Inquiry into Values',\n",
+       "       'Zoya', '\\O\\\" Is for Outlaw\"'],\n",
+       "      dtype='object', name='Title', length=742)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "book_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "f66362d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.where(book_pivot.index == '4 Blondes')[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "d968ed8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ids = np.where(final_rating['Title'] == 'Harry Potter and the Chamber of Secrets (Book 2)')[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "c857b476",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'http://images.amazon.com/images/P/0439064872.01.LZZZZZZZ.jpg'"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_rating.iloc[ids]['Image_url']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "1c8ee1a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "book_name =[]\n",
+    "for book_id in suggestion:\n",
+    "    book_name.append(book_pivot.index[book_id])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "d22b7dd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Index(['Harry Potter and the Chamber of Secrets (Book 2)',\n",
+       "        'Harry Potter and the Prisoner of Azkaban (Book 3)',\n",
+       "        'Harry Potter and the Goblet of Fire (Book 4)',\n",
+       "        'Harry Potter and the Sorcerer's Stone (Book 1)', 'Exclusive',\n",
+       "        'The Cradle Will Fall'],\n",
+       "       dtype='object', name='Title')]"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "book_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "e331c483",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ids_index =[]\n",
+    "for name in book_name[0]:\n",
+    "    ids = np.where(final_rating['Title'] == name)[0][0]\n",
+    "    ids_index.append(ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "f729117e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4364, 4537, 25119, 4670, 41785, 56125]"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ids_index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "56002d90",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://images.amazon.com/images/P/0440115450.01.LZZZZZZZ.jpg\n",
+      "http://images.amazon.com/images/P/0440115450.01.LZZZZZZZ.jpg\n",
+      "http://images.amazon.com/images/P/0440115450.01.LZZZZZZZ.jpg\n",
+      "http://images.amazon.com/images/P/0440115450.01.LZZZZZZZ.jpg\n",
+      "http://images.amazon.com/images/P/0440115450.01.LZZZZZZZ.jpg\n",
+      "http://images.amazon.com/images/P/0440115450.01.LZZZZZZZ.jpg\n"
+     ]
+    }
+   ],
+   "source": [
+    "for idx in ids_index:\n",
+    "    url = final_rating.iloc[ids]['Image_url']\n",
+    "    print(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "607f5f35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "pickle.dump(model,open('artifacts/model.pkl','wb'))\n",
+    "pickle.dump(book_names,open('artifacts/book_names.pkl','wb'))\n",
+    "pickle.dump(final_rating,open('artifacts/final_rating.pkl','wb'))\n",
+    "pickle.dump(book_pivot,open('artifacts/book_pivot.pkl','wb'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e5941d9",
+   "metadata": {},
+   "source": [
+    "# Testing model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "4c24aac3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recommend_book(book_name):\n",
+    "    book_id = np.where(book_pivot.index == book_name)[0][0]\n",
+    "    distance , suggestion = model.kneighbors(book_pivot.iloc[book_id,:].values.reshape(1,-1),n_neighbors=6)\n",
+    "\n",
+    "    for i in range(len(suggestion)):\n",
+    "        books = book_pivot.index[suggestion[i]]\n",
+    "        for j in books:\n",
+    "            if j == book_name:\n",
+    "                print(f\"You Searched '{book_name}'\\n\")\n",
+    "                print(\"The suggestion books are:\\n\")\n",
+    "            else:\n",
+    "                print(j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "9f7e57b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You Searched 'Harry Potter and the Chamber of Secrets (Book 2)'\n",
+      "\n",
+      "The suggestion books are:\n",
+      "\n",
+      "Harry Potter and the Prisoner of Azkaban (Book 3)\n",
+      "Harry Potter and the Goblet of Fire (Book 4)\n",
+      "Harry Potter and the Sorcerer's Stone (Book 1)\n",
+      "Exclusive\n",
+      "The Cradle Will Fall\n"
+     ]
+    }
+   ],
+   "source": [
+    "book_name =\"Harry Potter and the Chamber of Secrets (Book 2)\"\n",
+    "recommend_book(book_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd84c043",
    "metadata": {},
    "outputs": [],
    "source": []
