application working properly

--- a/notebook/research.ipynb
+++ b/notebook/research.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "219eee51",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "234c882c",
    "metadata": {},
    "outputs": [
@@ -31,12 +31,12 @@
     }
    ],
    "source": [
-    "books = pd.read_csv('Books.csv',sep=\",\",error_bad_lines=False,encoding='latin-1')"
+    "books = pd.read_csv('Books.csv',sep=\",\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "84c3de6b",
    "metadata": {},
    "outputs": [
@@ -168,7 +168,7 @@
        "4  http://images.amazon.com/images/P/0393045218.0...  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "da65b286",
    "metadata": {},
    "outputs": [
@@ -189,7 +189,7 @@
        "'http://images.amazon.com/images/P/0590629719.01.LZZZZZZZ.jpg'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "3f2cef70",
    "metadata": {},
    "outputs": [
@@ -210,7 +210,7 @@
        "(271360, 8)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "de2563b0",
    "metadata": {},
    "outputs": [
@@ -233,7 +233,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "85368daa",
    "metadata": {},
    "outputs": [],
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "91765d02",
    "metadata": {},
    "outputs": [
@@ -360,7 +360,7 @@
        "4  http://images.amazon.com/images/P/0393045218.0...  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "d42c5df7",
    "metadata": {},
    "outputs": [],
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "f17a184b",
    "metadata": {},
    "outputs": [
@@ -491,7 +491,7 @@
        "4  http://images.amazon.com/images/P/0393045218.0...  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "6f958738",
    "metadata": {},
    "outputs": [],
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "b4934c13",
    "metadata": {},
    "outputs": [
@@ -586,7 +586,7 @@
        "4        5  farnborough, hants, united kingdom   NaN"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "d999ab29",
    "metadata": {},
    "outputs": [
@@ -607,7 +607,7 @@
        "(278858, 3)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "6dcc1d99",
    "metadata": {},
    "outputs": [],
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "aac4f422",
    "metadata": {},
    "outputs": [
@@ -702,7 +702,7 @@
        "4        5  farnborough, hants, united kingdom   NaN"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "41534b1e",
    "metadata": {},
    "outputs": [],
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "05aa4b10",
    "metadata": {},
    "outputs": [
@@ -797,7 +797,7 @@
        "4   276729  0521795028            6"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "id": "570c20b7",
    "metadata": {},
    "outputs": [],
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "id": "0004f454",
    "metadata": {},
    "outputs": [
@@ -892,7 +892,7 @@
        "4   276729  0521795028       6"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "fd0a7018",
    "metadata": {},
    "outputs": [
@@ -923,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "id": "44b8f64e",
    "metadata": {},
    "outputs": [
@@ -944,7 +944,7 @@
        "Name: User_id, Length: 105283, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "id": "36fb4de7",
    "metadata": {},
    "outputs": [],
@@ -966,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "id": "b66302bc",
    "metadata": {},
    "outputs": [
@@ -987,7 +987,7 @@
        "Name: User_id, Length: 105283, dtype: bool"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "id": "9674a28e",
    "metadata": {},
    "outputs": [
@@ -1008,7 +1008,7 @@
        "(899,)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "id": "6fa90de2",
    "metadata": {},
    "outputs": [],
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "id": "c600449d",
    "metadata": {},
    "outputs": [
@@ -1044,7 +1044,7 @@
        "           dtype='int64', length=899)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "id": "1ebd7c83",
    "metadata": {},
    "outputs": [],
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "id": "18562abc",
    "metadata": {},
    "outputs": [
@@ -1139,7 +1139,7 @@
        "1460   277427  0060002050       0"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "id": "5767da9a",
    "metadata": {},
    "outputs": [],
@@ -1160,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "id": "5a4fc86e",
    "metadata": {},
    "outputs": [
@@ -1285,7 +1285,7 @@
        "4  http://images.amazon.com/images/P/002542730X.0...  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1296,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 31,
    "id": "069d0aab",
    "metadata": {},
    "outputs": [],
@@ -1306,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 32,
    "id": "2ba94412",
    "metadata": {},
    "outputs": [
@@ -1374,7 +1374,7 @@
        "4   Clifford Visita El Hospital (Clifford El Gran...       1"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1385,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 33,
    "id": "3bd91eee",
    "metadata": {},
    "outputs": [],
@@ -1395,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 34,
    "id": "6ef895b0",
    "metadata": {},
    "outputs": [
@@ -1463,7 +1463,7 @@
        "4   Clifford Visita El Hospital (Clifford El Gran...               1"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1474,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 35,
    "id": "5343e7d8",
    "metadata": {},
    "outputs": [],
@@ -1484,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 36,
    "id": "b8bca8a8",
    "metadata": {},
    "outputs": [
@@ -1615,7 +1615,7 @@
        "4  http://images.amazon.com/images/P/002542730X.0...              82  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1626,7 +1626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 37,
    "id": "e8e1a2d9",
    "metadata": {},
    "outputs": [],
@@ -1636,7 +1636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 38,
    "id": "2c8710a8",
    "metadata": {},
    "outputs": [
@@ -1767,7 +1767,7 @@
        "4  http://images.amazon.com/images/P/002542730X.0...              82  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1778,7 +1778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 39,
    "id": "5694fa2c",
    "metadata": {},
    "outputs": [],
@@ -1789,7 +1789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 40,
    "id": "43c315ff",
    "metadata": {},
    "outputs": [
@@ -1808,7 +1808,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1819,7 +1819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 41,
    "id": "e7bb4b02",
    "metadata": {},
    "outputs": [],
@@ -1829,7 +1829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 42,
    "id": "d81ad172",
    "metadata": {},
    "outputs": [
@@ -2273,7 +2273,7 @@
        "[742 rows x 888 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2284,7 +2284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 43,
    "id": "c3f240a1",
    "metadata": {},
    "outputs": [],
@@ -2294,7 +2294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 44,
    "id": "172968b3",
    "metadata": {},
    "outputs": [
@@ -2738,7 +2738,7 @@
        "[742 rows x 888 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2749,7 +2749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 45,
    "id": "6c0546f5",
    "metadata": {},
    "outputs": [],
@@ -2759,7 +2759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 46,
    "id": "80eb5b14",
    "metadata": {},
    "outputs": [],
@@ -2769,7 +2769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 47,
    "id": "e77821ad",
    "metadata": {},
    "outputs": [
@@ -2780,7 +2780,7 @@
        "\twith 14942 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2791,7 +2791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 48,
    "id": "2f600a3b",
    "metadata": {},
    "outputs": [
@@ -2801,7 +2801,7 @@
        "scipy.sparse.csr.csr_matrix"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2812,7 +2812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 49,
    "id": "a4bb564a",
    "metadata": {},
    "outputs": [],
@@ -2824,7 +2824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 50,
    "id": "86e93cf8",
    "metadata": {},
    "outputs": [
@@ -2834,7 +2834,7 @@
        "NearestNeighbors(algorithm='brute')"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2845,7 +2845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 51,
    "id": "48eb3604",
    "metadata": {},
    "outputs": [
@@ -2867,7 +2867,7 @@
        "Name: Harry Potter and the Chamber of Secrets (Book 2), Length: 888, dtype: float64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2878,7 +2878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 52,
    "id": "36cc5163",
    "metadata": {},
    "outputs": [],
@@ -2888,7 +2888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 53,
    "id": "9b406d0b",
    "metadata": {},
    "outputs": [
@@ -2899,7 +2899,7 @@
        "        77.28518616]])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2910,7 +2910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 54,
    "id": "69d185b7",
    "metadata": {},
    "outputs": [
@@ -2920,7 +2920,7 @@
        "array([[237, 240, 238, 241, 184, 536]], dtype=int64)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2931,7 +2931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 55,
    "id": "d2312b5b",
    "metadata": {},
    "outputs": [
@@ -2955,7 +2955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 56,
    "id": "bac49755",
    "metadata": {},
    "outputs": [],
@@ -2965,7 +2965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 57,
    "id": "65fdfb3c",
    "metadata": {},
    "outputs": [
@@ -2985,7 +2985,7 @@
        "      dtype='object', name='Title', length=742)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2996,7 +2996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 58,
    "id": "f66362d1",
    "metadata": {},
    "outputs": [
@@ -3006,7 +3006,7 @@
        "3"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3017,7 +3017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 59,
    "id": "d968ed8f",
    "metadata": {},
    "outputs": [],
@@ -3027,7 +3027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 60,
    "id": "c857b476",
    "metadata": {},
    "outputs": [
@@ -3037,7 +3037,7 @@
        "'http://images.amazon.com/images/P/0439064872.01.LZZZZZZZ.jpg'"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3048,7 +3048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 61,
    "id": "1c8ee1a0",
    "metadata": {},
    "outputs": [],
@@ -3060,7 +3060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 62,
    "id": "d22b7dd7",
    "metadata": {},
    "outputs": [
@@ -3075,7 +3075,7 @@
        "       dtype='object', name='Title')]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3086,7 +3086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 63,
    "id": "e331c483",
    "metadata": {},
    "outputs": [],
@@ -3099,7 +3099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 64,
    "id": "f729117e",
    "metadata": {},
    "outputs": [
@@ -3109,7 +3109,7 @@
        "[4364, 4537, 25119, 4670, 41785, 56125]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3120,7 +3120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 65,
    "id": "56002d90",
    "metadata": {},
    "outputs": [
@@ -3145,7 +3145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 66,
    "id": "607f5f35",
    "metadata": {},
    "outputs": [],
@@ -3167,7 +3167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 67,
    "id": "4c24aac3",
    "metadata": {},
    "outputs": [],
@@ -3188,7 +3188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 68,
    "id": "9f7e57b9",
    "metadata": {},
    "outputs": [
@@ -3216,7 +3216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd84c043",
+   "id": "261889bd",
    "metadata": {},
    "outputs": [],
    "source": []
